<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/navig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:text="@string/navig"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/nom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nom1"
            android:inputType="text" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email1"/>

        <TextView
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Telephone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/telephone1"/>

        <TextView
            android:id="@+id/adr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adr"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/adr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/adr1" />

        <TextView
            android:id="@+id/ville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ville"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/villelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>


        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A88B34"
            android:text="@string/btn" />
    </LinearLayout>


</ScrollView>