<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFC107"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/verifi" />

        <TextView
            android:id="@+id/resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnretour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A88B34"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/btnretour" />

    <Button
        android:id="@+id/btnpartager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#A88B34"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnpartager"/>
</LinearLayout>
